<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_games"
            android:icon="@drawable/ic_videogame_asset_black_24dp"
            android:title="@string/menu_games" />
        <item
            android:id="@+id/nav_books"
            android:icon="@drawable/ic_library_books_black_24dp"
            android:title="@string/menu_books" />
        <item
            android:id="@+id/nav_movies"
            android:icon="@drawable/ic_movie_black_24dp"
            android:title="@string/menu_movies" />
        <item
            android:id="@+id/nav_series"
            android:icon="@drawable/ic_live_tv_black_24dp"
            android:title="@string/menu_series" />

    </group>
</menu>
